Fixed bug with double scroll in Profile Settings (React Portal)

--- a/src/components/LoginPage/LoginPage.module.css
+++ b/src/components/LoginPage/LoginPage.module.css
@@ -2,6 +2,12 @@
   margin: 0;
 }
 
+@media (min-width: 768px) {
+  .wrapper {
+    padding: 60px;
+  }
+}
+
 .loginPage {
   display: flex;
   flex-direction: column;
