--- a/src/components/ProfilePage/Profileinfo/ProfileSettings/ProfileSettings.module.css
+++ b/src/components/ProfilePage/Profileinfo/ProfileSettings/ProfileSettings.module.css
@@ -27,6 +27,12 @@
   column-gap: 0.1em;
 }
 
+@media (min-width: 468px) {
+  .profileDetails__item {
+    grid-template-columns: 8.2em 1fr;
+  }
+}
+
 .profileDetails__itemTitle {
   font-size: 1em;
   font-weight: 500;
@@ -42,13 +48,16 @@
 
 .editProfileDetails {
   position: absolute;
-  top: 70px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.8); */
-  background-color: var(--page-bg);
-  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+  /* background-color: var(--page-bg); */
+}
+
+.editProfileDetails__body {
+  margin-top: 70px;
 }
 
 .editProfileDetails__header {
